--- a/.github/workflows/codeowner-approval.yaml
+++ b/.github/workflows/codeowner-approval.yaml
@@ -6,10 +6,18 @@ on:
 
 jobs:
   codeowners-approval:
-    uses: noamelf/codeowner-approval-action/.github/workflows/codeowner-approval-template.yaml@master
-    with:
-      app-id: ${{ MY_APP_ID }}
-      pr-number: ${{ github.event.pull_request.number }}
-      repo-name: ${{ github.repository }}
-    secrets:
-      app-secret-key: ${{ MY_APP_SECRET_KEY }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.app-id }}
+          private-key: ${{ secrets.app-private-key }}
+          owner: ${{ github.repository_owner }}
+
+      - name: Check Code Owner Approval
+        uses: noamelf/codeowner-approval-action@main 
+        with:
+          pr-number: ${{ github.event.pull_request.number }}
+          repo-name: ${{ github.repository }}
+          github_token: ${{ steps.app-token.outputs.token }}
