Fix typo in GitHub Actions workflow by correcting 'github_token' to 'github-token'

--- a/.github/workflows/codeowner-approval.yaml
+++ b/.github/workflows/codeowner-approval.yaml
@@ -20,4 +20,4 @@ jobs:
         with:
           pr-number: ${{ github.event.pull_request.number }}
           repo-name: ${{ github.repository }}
-          github_token: ${{ steps.app-token.outputs.token }}
+          github-token: ${{ steps.app-token.outputs.token }}
