--- a/.github/workflows/create-fake-pr.yaml
+++ b/.github/workflows/create-fake-pr.yaml
@@ -3,6 +3,10 @@ name: "Create a PR as a bot"
 on:
   workflow_dispatch: # Allows you to manually trigger the workflow
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   create_pull_request:
     runs-on: ubuntu-latest
