Update pre-commit configuration and enhance codeowner approval checks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,5 +27,8 @@ repos:
     rev: v1.11.2
     hooks:
       - id: mypy
-        additional_dependencies: [types-PyYAML]
-        exclude: "build/"
+        args:
+          - "--python-version=3.12"
+        additional_dependencies:
+          - codeowners
+          - pygithub
