--- a/action.yaml
+++ b/action.yaml
@@ -10,6 +10,9 @@ inputs:
   github-token:
     description: "GitHub token"
     required: true
+branding:
+  icon: "git-pull-request"
+  color: "blue"
 runs:
   using: "docker"
   image: "Dockerfile"
