--- a/action.yaml
+++ b/action.yaml
@@ -1,5 +1,5 @@
-name: "Codeowner Approval Checker"
-description: "Ensure all code owners (including GitHub teams) approve a PR before merging."
+name: "Codeowners Multi-Approval Check"
+description: "Extends the functionality of GitHub's `CODEOWNERS` feature by requiring all codeowners listed to approve a pull request, and not just one of them"
 inputs:
   pr-number:
     description: "Pull request number"
